fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -523,7 +523,6 @@ html {
     header {
         width: 100%;
         height: 50em;
-        margin-top: 1em;
     }
     nav ul {
         margin: 0;
